[package]
name = "conntrack"
version = "0.1.3"
authors = ["Matt Bolt <mbolt35@gmail.com>"]
repository = "https://github.com/rusty-bolt/conntrack-rs"
description = "Netfilter Conntrack"
categories = ["network-programming"]
keywords = ["conntrack", "netfilter-conntrack"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
libc = "0.2.174"
neli = "0.7.1"
bitflags = "2.9.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"

[[example]]
name = "conntrack-dump"
path = "examples/conntrack_dump.rs"
